# gopher-c-server

./: CMakeLists.txt  README.md  config.txt  main.c
core/: constants.h  core.h
public/folder/subfolder/2/: testo.txt
shared/: shared.c  shared.h
unix/: unix.c  unix.h
win/: listener.c  logger.c  receiver.c  win.c  win.h
